force-app/main/default/objects/Port__c/Port__c.object-meta.xml
<CustomObject>
    <label>Port</label>
    <nameField>
        <label>Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>