force-app/main/default/objects/Port__c/fields/BSLS_ID__c.field-meta.xml
<CustomField>
    <fullName>BSLS_ID__c</fullName>
    <label>BSLS ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>