force-app/main/default/objects/Port__c/fields/Shortform__c.field-meta.xml
<CustomField>
    <fullName>Shortform__c</fullName>
    <label>Shortform</label>
    <length>15</length>
    <type>Text</type>
</CustomField>