force-app/main/default/objects/Port__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Shortform__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Sector__c</columns>
    <columns>BSLS_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>